@@ -68,6 +68,7 @@ Contributors:
    extern unsigned long g_pub_msgs_sent;
 #  endif
 #  ifdef WITH_WEBSOCKETS
+#    include <lws_config.h>
 #    include <libwebsockets.h>
 #  endif
 #else
