@@ -37,6 +37,7 @@ Contributors:
 #include <time.h>
 
 #ifdef WITH_WEBSOCKETS
+#  include <lws_config.h>
 #  include <libwebsockets.h>
 #endif
 
