@@ -43,6 +43,7 @@ Contributors:
 #include <tcpd.h>
 #endif
 #ifdef WITH_WEBSOCKETS
+#  include <lws_config.h>
 #  include <libwebsockets.h>
 #endif
 
